--- a/index.html
+++ b/index.html
@@ -2,9 +2,87 @@
 <html lang="en">
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-		<!-- Inserta tu código aqui -->
+		<link rel="stylesheet" type="text/css" href="css/grid-system.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+		<meta charset="utf-8">
+		<title>Dog</title>
 	</head>
 	<body>
-		<!-- Inserta tu código aqui -->
+	<header>
+		<div class="container1">
+			<div class="row">
+				<div class="col-12">
+					<h1>DOG CUTE</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<ul>
+						<a href="nosotros.html"><li>Nosotros</li></a>
+						<a href="blog.html"><li>Blog</li></a>
+						<a href="index.html"><li>Contáctanos</li></a>
+					</ul>
+				</div>
+			</div>
+		</div>
+		 	<div class="container2">
+				<div class="row">
+					<div class="col-12">
+						<h1 class="text-center">DOG SMALL</h1>
+						<h4 class="text-center">"Hasta el pequeño chihuahua es un lobo de corazon"</h4>
+					</div>
+				</div>
+			</div>
+	</header>
+	<section>
+		<div class="container3">
+			<div class="row">
+				<div class="col-6">
+					<img src="img/pug.jpg">
+					<h3>Pug</h3>
+					<p>Es una raza canina con origen histórico en China, pero con el patrocinio de Reino Unido. Se trata de un perro pequeño de tipo molosoide, utilizado como mascota.</p>
+					<div class="leer">
+						<a href="#">Lee mas</a>
+					</div>
+				</div>
+				<div class="col-6">
+					<img src="img/bichon.jpg">
+					<h3>Bichon Maltes</h3>
+					<p>Es una raza de perro de tamaño pequeño que surgió en el Mediterráneo central siendo Italia quien tomó el patrocinio. El nombre de la raza y el origen son, generalmente, asociados a la isla mediterránea de Malta,</p>
+					<div class="leer">
+						<a href="#">Lee mas</a>
+					</div>
+				</div>
+			</div>
+			<div class="row">				
+				<div class="col-6">
+					<img src="img/chiguagua.jpg">
+					<h3>Chihuahua</h3>
+					<p>Es una raza de perro originaria de México. Recibe su nombre del estado mexicano de Chihuahua, lugar donde fue descubierto. A diferencia de la creencia que existe en algunos países de que el perro le dio el nombre al estado, la palabra Chihuahua significa ‘lugar árido y arenoso’ en la lengua del pueblo rarámuri.</p>
+					<div class="leer">
+						<a href="#">Lee mas</a>
+					</div>
+				</div>
+				<div class="col-6">
+					<img src="img/yorshai.jpg">
+					<h3>Yorkshire terrier </h3>
+					<p>Es una raza canina producto de la combinación de terrier escoceses e ingleses, que se originó cuando una parte de la población de Escocia se vio desplazada, debido a la Revolución industrial, y se asentaron en Inglaterra.</p>
+					<div class="leer">
+						<a href="#">Lee mas</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container4">
+			<div class="row">
+				<div class="col-12 footer">
+					<p>©SmallDog-2016. All rights reserved. </p>
+				</div>
+			</div>
+		</div>
+	</footer>
 	</body>
 </html>
